force-app/main/default/objects/Engagement_Flow_Configuration__c/fields/Engagement_Chat_Routing__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Chat_Routing__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores the routing configuration of &apos;Engagement Chat&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Engagement_Chat_Routing</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>