force-app/main/default/objects/Engagement_Flow_Configuration__c/fields/Engagement_RecordType_ID__c.field-meta.xml
<CustomField>
    <fullName>Engagement_RecordType_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Engagement RecordType ID used in Flow updates and decision nodes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Engagement RecordType ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>