force-app/main/default/objects/Engagement_Flow_Configuration__c/fields/Engagement_Solve_QA_Queue__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Solve_QA_Queue__c</fullName>
    <label>Engagement Solve QA Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>