force-app/main/default/objects/Engagement_Flow_Configuration__c/fields/Omni_Case_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Omni_Case_Record_Types__c</fullName>
    <description>This field will hold a list of Case Record Type Developer Names that are accepted for Omni Routing. 
(i.e. Engagement,Payroll_Care,Benefits_Care)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Omni Case Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>